# PBLF2022-AI-image-processing

./: .gitignore  README.md
Car_demo/: CMakeLists.txt  app.cpp  work.sh
Example_cmake/: work.sh
Face_demo/: candidates.npy  candidates.txt  this_is_who_camera.py
Image_demo/: CMakeLists.txt  ImageTest.cpp  work.sh
Video_demo/: CMakeLists.txt  Video_test.cpp  work.sh
